@@ -367,6 +367,7 @@ $specialPageAliases = array(
 	'Blankpage'                 => array( 'صفحة_فارغة' ),
 	'LinkSearch'                => array( 'بحث_الوصلات' ),
 	'DeletedContributions'      => array( 'مساهمات_محذوفة' ),
+	'Nuke'                      => array( 'حذف_كمي' ),
 );
 
 $imageFiles = array(
